--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Harikrishna</title>
+  <title>
+    <Harikrishna />
+  </title>
 </head>
 
 <body>
